tests/ui/let-unstable.stderr
error: E::Bbb should sort before E::Ccc
  --> tests/ui/let-unstable.rs:15:5
   |
15 |     #[sorted]
   |     ^^^^^^^^^
   |
   = note: this error originates in the attribute macro `sorted` (in Nightly builds, run with -Z macro-backtrace for more info)
